# object-type-crate

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  object.rs
