[package]
name = "object-type"
version = "0.1.0"
edition = "2021"
description = "struct Object - wrapper for anything type."
documentation = "https://github.com/Rusti-X/object-type-crate/blob/main/README.md"
repository = "https://github.com/Rusti-X/object-type-crate.git"
license = "BSD-3-Clause"
keywords = ["object", "struct", "type"]
authors = ["Rustix"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
